extras/agentgateway/service-to-gateway-ui.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-to-gateway-ui
spec:
  type: LoadBalancer
  selector:
    app.kubernetes.io/name: agentgateway-proxy
  ports:
    - protocol: TCP
      port: 15000
      targetPort: 15000
