extras/agentgateway/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: exa-route
spec:
  parentRefs:
    - name: agentgateway-proxy
      namespace: agentgateway-system
  hostnames:
    - "exa-mcp.192.168.122.201.nip.io"
  rules:
    - backendRefs:
        - name: exa
          group: agentgateway.dev
          kind: AgentgatewayBackend
      matches:
        - path:
            type: PathPrefix
            value: /mcp
